error changes on stringxml

--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 </resources>
     <string name="app_name">PIP</string>
+
     <string name="facebook_app_id">3058628554205891</string>
+
     <string name="fb_login_protocol_scheme">fb3058628554205891</string>
 </resources>
